# ckanext-geocat

./: .coveragerc  MANIFEST.in  README.md  dev-requirements.txt  publiccode.yml  pyproject.toml  requirements.txt  schema.xml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/geocat/: commands.py  config_declaration.yaml  csw_processor.py  harvester.py  utils.py
ckanext/geocat/tests/: conftest.py  test_dataset_metadata.py  test_distribution_metadata.py  test_harvester.py  test_harvester_ech0271.py  test_helpers.py  test_xpath_utils.py
ckanext/geocat/tests/fixtures/: astra.xml  capabilities.xml  complete.xml  csw_get_record_by_id.xml  geocat-dcat-testdata.xml  geocat-testdata.xml  response_all_results.xml  response_just_one_result.xml  testdata-deprecated-protocols.xml
ckanext/geocat/tests/fixtures/test_harvesters/: capabilities.xml  response_getrecords_dcat_batch.xml  response_getrecords_dcat_one.xml  result_1.xml  result_2_dcat.xml
ckanext/geocat/utils/: csw_mapping.py  csw_processor.py  dcat_mapping.py  geocat-terms-of-use.ttl  geocat-terms-of-use.xml  harvest_helper.py  mapping.yaml  mapping_utils.py  ogdch_map_utils.py  search_utils.py  vocabulary_utils.py  xpath_utils.py
